RESOLVED FIXED225259
[iOS] Crash when tapping fields on cycle.travel
https://bugs.webkit.org/show_bug.cgi?id=225259
Summary [iOS] Crash when tapping fields on cycle.travel
Aditya Keerthi
Reported 2021-04-30 16:56:16 PDT
Steps To Reproduce: 1. Visit https://cycle.travel/map/mobile?debug=1 2. Tap on the From or To field. 3. Observe page reload or “A problem repeatedly occurred”.
Attachments
Patch (16.90 KB, patch)
2021-04-30 18:06 PDT, Aditya Keerthi
no flags
Patch (16.88 KB, patch)
2021-04-30 19:48 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-04-30 16:56:36 PDT
Aditya Keerthi
Comment 2 2021-04-30 18:06:54 PDT
Wenson Hsieh
Comment 3 2021-04-30 18:23:08 PDT
Comment on attachment 427475 [details] Patch r=mews
Tim Horton
Comment 4 2021-04-30 18:24:06 PDT
Comment on attachment 427475 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427475&action=review > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:3080 > +Optional<FocusedElementInformation> WebPage::getFocusedElementInformation() if it's not out-arg-y, this should not have a get- prefix
Aditya Keerthi
Comment 5 2021-04-30 19:48:44 PDT
EWS
Comment 6 2021-05-03 08:58:37 PDT
Committed r276901 (237247@main): <https://commits.webkit.org/237247@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427483 [details].
Note You need to log in before you can comment on or make changes to this bug.